--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_csv():\n",
-    "    return pd.read_csv('Video_Games_Sales_as_at_22_Dec_2016.csv')"
+    "    return pd.read_csv('Video_Games_Sales.csv')"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -97,10 +97,10 @@
        "      <td>3.77</td>\n",
        "      <td>8.45</td>\n",
        "      <td>82.53</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>322.0</td>\n",
+       "      <td>76</td>\n",
+       "      <td>51</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>322</td>\n",
        "      <td>Nintendo</td>\n",
        "      <td>E</td>\n",
        "    </tr>\n",
@@ -116,10 +116,10 @@
        "      <td>3.79</td>\n",
        "      <td>3.29</td>\n",
        "      <td>35.52</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>73.0</td>\n",
+       "      <td>82</td>\n",
+       "      <td>73</td>\n",
        "      <td>8.3</td>\n",
-       "      <td>709.0</td>\n",
+       "      <td>709</td>\n",
        "      <td>Nintendo</td>\n",
        "      <td>E</td>\n",
        "    </tr>\n",
@@ -135,10 +135,10 @@
        "      <td>3.28</td>\n",
        "      <td>2.95</td>\n",
        "      <td>32.77</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>8</td>\n",
-       "      <td>192.0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>73</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>192</td>\n",
        "      <td>Nintendo</td>\n",
        "      <td>E</td>\n",
        "    </tr>\n",
@@ -154,10 +154,10 @@
        "      <td>6.50</td>\n",
        "      <td>2.88</td>\n",
        "      <td>29.80</td>\n",
-       "      <td>89.0</td>\n",
-       "      <td>65.0</td>\n",
+       "      <td>89</td>\n",
+       "      <td>65</td>\n",
        "      <td>8.5</td>\n",
-       "      <td>431.0</td>\n",
+       "      <td>431</td>\n",
        "      <td>Nintendo</td>\n",
        "      <td>E</td>\n",
        "    </tr>\n",
@@ -173,10 +173,10 @@
        "      <td>2.93</td>\n",
        "      <td>2.84</td>\n",
        "      <td>28.92</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>41.0</td>\n",
+       "      <td>58</td>\n",
+       "      <td>41</td>\n",
        "      <td>6.6</td>\n",
-       "      <td>129.0</td>\n",
+       "      <td>129</td>\n",
        "      <td>Nintendo</td>\n",
        "      <td>E</td>\n",
        "    </tr>\n",
@@ -193,21 +193,21 @@
        "4               Wii Play      Wii           2006.0      Misc  Nintendo   \n",
        "\n",
        "   NA_Sales  EU_Sales  JP_Sales  Other_Sales  Global_Sales  Critic_Score  \\\n",
-       "0     41.36     28.96      3.77         8.45         82.53          76.0   \n",
-       "1     15.68     12.76      3.79         3.29         35.52          82.0   \n",
-       "2     15.61     10.93      3.28         2.95         32.77          80.0   \n",
-       "3     11.28      9.14      6.50         2.88         29.80          89.0   \n",
-       "4     13.96      9.18      2.93         2.84         28.92          58.0   \n",
+       "0     41.36     28.96      3.77         8.45         82.53            76   \n",
+       "1     15.68     12.76      3.79         3.29         35.52            82   \n",
+       "2     15.61     10.93      3.28         2.95         32.77            80   \n",
+       "3     11.28      9.14      6.50         2.88         29.80            89   \n",
+       "4     13.96      9.18      2.93         2.84         28.92            58   \n",
        "\n",
-       "   Critic_Count User_Score  User_Count Developer Rating  \n",
-       "0          51.0          8       322.0  Nintendo      E  \n",
-       "1          73.0        8.3       709.0  Nintendo      E  \n",
-       "2          73.0          8       192.0  Nintendo      E  \n",
-       "3          65.0        8.5       431.0  Nintendo      E  \n",
-       "4          41.0        6.6       129.0  Nintendo      E  "
+       "   Critic_Count  User_Score  User_Count Developer Rating  \n",
+       "0            51         8.0         322  Nintendo      E  \n",
+       "1            73         8.3         709  Nintendo      E  \n",
+       "2            73         8.0         192  Nintendo      E  \n",
+       "3            65         8.5         431  Nintendo      E  \n",
+       "4            41         6.6         129  Nintendo      E  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
