--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4            41         6.6         129  Nintendo      E  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -234,28 +234,28 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 10129 entries, 0 to 10128\n",
+      "RangeIndex: 7017 entries, 0 to 7016\n",
       "Data columns (total 16 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   Name             10129 non-null  object \n",
-      " 1   Platform         10129 non-null  object \n",
-      " 2   Year_of_Release  9940 non-null   float64\n",
-      " 3   Genre            10129 non-null  object \n",
-      " 4   Publisher        10120 non-null  object \n",
-      " 5   NA_Sales         10129 non-null  float64\n",
-      " 6   EU_Sales         10129 non-null  float64\n",
-      " 7   JP_Sales         10129 non-null  float64\n",
-      " 8   Other_Sales      10129 non-null  float64\n",
-      " 9   Global_Sales     10129 non-null  float64\n",
-      " 10  Critic_Score     8137 non-null   float64\n",
-      " 11  Critic_Count     8137 non-null   float64\n",
-      " 12  User_Score       10015 non-null  object \n",
-      " 13  User_Count       7590 non-null   float64\n",
-      " 14  Developer        10096 non-null  object \n",
-      " 15  Rating           9950 non-null   object \n",
-      "dtypes: float64(9), object(7)\n",
-      "memory usage: 1.2+ MB\n"
+      " 0   Name             7017 non-null   object \n",
+      " 1   Platform         7017 non-null   object \n",
+      " 2   Year_of_Release  6939 non-null   float64\n",
+      " 3   Genre            7017 non-null   object \n",
+      " 4   Publisher        7013 non-null   object \n",
+      " 5   NA_Sales         7017 non-null   float64\n",
+      " 6   EU_Sales         7017 non-null   float64\n",
+      " 7   JP_Sales         7017 non-null   float64\n",
+      " 8   Other_Sales      7017 non-null   float64\n",
+      " 9   Global_Sales     7017 non-null   float64\n",
+      " 10  Critic_Score     7017 non-null   int64  \n",
+      " 11  Critic_Count     7017 non-null   int64  \n",
+      " 12  User_Score       7017 non-null   float64\n",
+      " 13  User_Count       7017 non-null   int64  \n",
+      " 14  Developer        7013 non-null   object \n",
+      " 15  Rating           6947 non-null   object \n",
+      "dtypes: float64(7), int64(3), object(6)\n",
+      "memory usage: 877.2+ KB\n"
      ]
     }
    ],
