--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -853,6 +853,8 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
+    "# Shayma's Done\n",
+    "\n",
     "# Code from \"https://www.kaggle.com/code/baptisteadn/a-brief-analysis-of-video-games-sales/notebook\""
    ]
   }
