Created 3 sub-datasets

--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        "4      E         MEDIUM  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "Name: Genre, dtype: int64"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "Name: Year_of_Release, dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "max       9.600000  10665.000000  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "<AxesSubplot:xlabel='NA_Sales', ylabel='Year_of_Release'>"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
        "<AxesSubplot:xlabel='JP_Sales', ylabel='Genre'>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "<AxesSubplot:xlabel='EU_Sales', ylabel='Genre'>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "<AxesSubplot:xlabel='Other_Sales', ylabel='Genre'>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
        "<AxesSubplot:xlabel='Global_Sales', ylabel='Genre'>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "<AxesSubplot:xlabel='Global_Sales', ylabel='Genre'>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -818,16 +818,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x26821975f10>"
+       "<matplotlib.legend.Legend at 0x24ea640f6a0>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -900,16 +900,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x26821a26f70>"
+       "<matplotlib.legend.Legend at 0x24ea6801100>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
        "Name: Global_Sales, dtype: float64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
        "  Text(0, 0, '')])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
        "[149 rows x 18 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1518,6 +1518,104 @@
    "source": [
     "df.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sports</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Racing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sports</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Platform</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Misc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Platform</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Racing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sports</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Misc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Sports</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Genre\n",
+       "0    Sports\n",
+       "1    Racing\n",
+       "2    Sports\n",
+       "3  Platform\n",
+       "4      Misc\n",
+       "5  Platform\n",
+       "6    Racing\n",
+       "7    Sports\n",
+       "8      Misc\n",
+       "9    Sports"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_head = df[[\"Genre\"]]\n",
+    "df_head.head(10)"
+   ]
   }
  ],
  "metadata": {
@@ -1541,7 +1639,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "147b12775c70782a669c3e17562f6ad8d6ea3b756fee47049a2c9ad2cf2390b4"
+    "hash": "b09ec625f77bf4fd762565a912b97636504ad6ec901eb2d0f4cf5a7de23e1ee5"
    }
   }
  },
