--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -856,7 +856,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Top Ten Bst Selling Games Regionally "
+    "## Top Ten Best Selling Games Regionally "
    ]
   },
   {
