--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -21,7 +21,7 @@
     "import sklearn\n",
     "assert sklearn.__version__ >= \"0.20\"\n",
     "import numpy as np\n",
-    "import cv2"
+    "# import cv2"
    ]
   },
   {
