--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -1875,6 +1875,78 @@
    "source": [
     "corr_matrix[\"Genre_Identifier\"].sort_values(ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 537,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Platform_Identifier          1.000000\n",
+       "Sales_Category_Identifier    0.170548\n",
+       "Critic_Count                 0.146763\n",
+       "NA_Sales                     0.129114\n",
+       "Global_Sales                 0.117541\n",
+       "Other_Sales                  0.113587\n",
+       "EU_Sales                     0.076043\n",
+       "Year_of_Release              0.068973\n",
+       "JP_Sales                     0.065814\n",
+       "Rating_Identifier            0.032567\n",
+       "Developer_Identifier         0.007616\n",
+       "Publisher_Identifier        -0.040987\n",
+       "User_Score                  -0.046868\n",
+       "Genre_Identifier            -0.057695\n",
+       "Critic_Score                -0.096126\n",
+       "User_Count                  -0.120534\n",
+       "Name: Platform_Identifier, dtype: float64"
+      ]
+     },
+     "execution_count": 537,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_matrix[\"Platform_Identifier\"].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 538,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Publisher_Identifier         1.000000\n",
+       "JP_Sales                     0.027210\n",
+       "Developer_Identifier         0.006837\n",
+       "User_Score                   0.004324\n",
+       "Rating_Identifier           -0.004937\n",
+       "EU_Sales                    -0.012534\n",
+       "Global_Sales                -0.015400\n",
+       "Genre_Identifier            -0.017441\n",
+       "NA_Sales                    -0.018790\n",
+       "Critic_Count                -0.020729\n",
+       "Critic_Score                -0.020738\n",
+       "User_Count                  -0.024763\n",
+       "Sales_Category_Identifier   -0.025335\n",
+       "Platform_Identifier         -0.040987\n",
+       "Other_Sales                 -0.043399\n",
+       "Year_of_Release             -0.061141\n",
+       "Name: Publisher_Identifier, dtype: float64"
+      ]
+     },
+     "execution_count": 538,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_matrix[\"Publisher_Identifier\"].sort_values(ascending=False)"
+   ]
   }
  ],
  "metadata": {
