--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -3419,7 +3419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -3437,13 +3437,13 @@
     "\n",
     "gnb = GaussianNB()\n",
     "gnb.fit(X_train, y_train)\n",
-    "y_pred = gnb.predict(X_test)\n",
-    "print(\"Number of mislabeled points out of a total %d points : %d\" % (X_test.shape[0], (y_test != y_pred).sum()))\n"
+    "y_pred_gnb = gnb.predict(X_test)\n",
+    "print(\"Number of mislabeled points out of a total %d points : %d\" % (X_test.shape[0], (y_test != y_pred_gnb).sum()))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
@@ -3451,13 +3451,19 @@
      "output_type": "stream",
      "text": [
       "Train data accuracy: 0.46394756008739985\n",
-      "Test data accuracy: 0.4912663755458515\n"
+      "Test data accuracy: 0.24526928675400292\n",
+      "F measure:  [0.51851852 0.41225627 0.52484076 0.21836228 0.57486631 0.67510549]\n",
+      "Recall Score:  [0.53333333 0.36097561 0.71034483 0.23036649 0.48314607 0.57971014]\n",
+      "Precision Score:  [0.5045045  0.48051948 0.41616162 0.20754717 0.70957096 0.80808081]\n"
      ]
     }
    ],
    "source": [
     "print(\"Train data accuracy:\",accuracy_score(y_true = y_train, y_pred=gnb.predict(X_train)))\n",
-    "print(\"Test data accuracy:\",accuracy_score(y_true = y_test, y_pred=y_pred))"
+    "print(\"Test data accuracy:\",accuracy_score(y_true = y_test, y_pred=y_pred))\n",
+    "print(\"F measure: \",f1_score(y_test, y_pred_gnb, average=None))\n",
+    "print(\"Recall Score: \",recall_score(y_test, y_pred_gnb, average=None))\n",
+    "print(\"Precision Score: \",precision_score(y_test, y_pred_gnb, average=None))"
    ]
   },
   {
@@ -3469,7 +3475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -3490,13 +3496,13 @@
     "\n",
     "mnb = MultinomialNB(alpha=1.0)\n",
     "mnb.fit(X_train, y_train)\n",
-    "y_pred = mnb.predict(X_test)\n",
-    "print(\"Number of mislabeled points out of a total %d points : %d\" % (X_test.shape[0], (y_test != y_pred).sum()))"
+    "y_pred_mnb = mnb.predict(X_test)\n",
+    "print(\"Number of mislabeled points out of a total %d points : %d\" % (X_test.shape[0], (y_test != y_pred_mnb).sum()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -3505,18 +3511,85 @@
      "text": [
       "Train data accuracy: 0.24599417334304444\n",
       "Test data accuracy: 0.24526928675400292\n",
-      "F measure:  [0.76237624 0.8        0.82453152 0.73655914 0.90847458 0.88501742]\n",
-      "Recall Score:  [0.73333333 0.8097561  0.83448276 0.71727749 0.90337079 0.92028986]\n",
-      "Precision Score:  [0.79381443 0.79047619 0.81481481 0.75690608 0.91363636 0.85234899]\n"
+      "F measure:  [0.17801047 0.16883117 0.34278351 0.22140221 0.12156863 0.42696629]\n",
+      "Recall Score:  [0.16190476 0.1902439  0.45862069 0.31413613 0.06966292 0.41304348]\n",
+      "Precision Score:  [0.19767442 0.15175097 0.27366255 0.17094017 0.47692308 0.44186047]\n"
      ]
     }
    ],
    "source": [
     "print(\"Train data accuracy:\",accuracy_score(y_true = y_train, y_pred=mnb.predict(X_train)))\n",
     "print(\"Test data accuracy:\",accuracy_score(y_true = y_test, y_pred=y_pred))\n",
-    "print(\"F measure: \",f1_score(y_test, predict, average=None))\n",
-    "print(\"Recall Score: \",recall_score(y_test, predict, average=None))\n",
-    "print(\"Precision Score: \",precision_score(y_test, predict, average=None))"
+    "print(\"F measure: \",f1_score(y_test, y_pred_mnb, average=None))\n",
+    "print(\"Recall Score: \",recall_score(y_test, y_pred_mnb, average=None))\n",
+    "print(\"Precision Score: \",precision_score(y_test, y_pred_mnb, average=None))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complement Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of mislabeled points out of a total 1374 points : 1014\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import ComplementNB\n",
+    "\n",
+    "# MultinomialNB implements the naive Bayes algorithm for multinomially distributed data,\n",
+    "# and is one of the two classic naive Bayes variants used in text classification \n",
+    "# (where the data are typically represented as word vector counts, \n",
+    "# although tf-idf vectors are also known to work well in practice). \n",
+    "\n",
+    "cnb = ComplementNB()\n",
+    "cnb.fit(X_train, y_train)\n",
+    "y_pred_cnb = cnb.predict(X_test)\n",
+    "print(\"Number of mislabeled points out of a total %d points : %d\" % (X_test.shape[0], (y_test != y_pred_cnb).sum()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data accuracy: 0.24854333576110707\n",
+      "Test data accuracy: 0.24526928675400292\n",
+      "F measure:  [0.         0.02542373 0.38941954 0.03864734 0.04731183 0.41176471]\n",
+      "Recall Score:  [0.         0.01463415 0.9137931  0.02094241 0.0247191  0.55797101]\n",
+      "Precision Score:  [0.         0.09677419 0.24743231 0.25       0.55       0.32627119]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\LENOVO\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Train data accuracy:\",accuracy_score(y_true = y_train, y_pred=cnb.predict(X_train)))\n",
+    "print(\"Test data accuracy:\",accuracy_score(y_true = y_test, y_pred=y_pred))\n",
+    "print(\"F measure: \",f1_score(y_test, y_pred_cnb, average=None))\n",
+    "print(\"Recall Score: \",recall_score(y_test, y_pred_cnb, average=None))\n",
+    "print(\"Precision Score: \",precision_score(y_test, y_pred_cnb, average=None))"
    ]
   }
  ],
