--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -2984,7 +2984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -2993,20 +2993,21 @@
        "0.8422419040284786"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.metrics import precision_score, recall_score\n",
-    "\n",
+    "# look at the total number of predicted Positives (the True Positives plus the False Positives, TP+FP), \n",
+    "# and see how many of them are True Positive (TP)\n",
     "precision_score(y_test,y_pred, average='weighted')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -3015,12 +3016,15 @@
        "0.8427947598253275"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# proportion of actual Positives being correctly classified\n",
+    "# recall is TP/(TP+FN)\n",
+    "\n",
     "recall_score(y_test, y_pred, average='weighted')"
    ]
   },
@@ -3033,7 +3037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -3042,13 +3046,15 @@
        "0.8421266482542893"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# F-1 score is one of the common measures to rate how successful a classifier is.\n",
     "\n",
     "f1_score(y_test, y_pred, average= 'weighted')"
    ]
@@ -3062,16 +3068,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.79847078, 0.80720918, 0.80928962])"
+       "array([0.80939377, 0.80557073, 0.8136612 ])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3084,7 +3090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -3093,7 +3099,7 @@
        "array([2, 5, 3, ..., 3, 2, 6], dtype=int64)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3105,7 +3111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -3114,7 +3120,7 @@
        "0.4719188739399877"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3135,7 +3141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -3201,7 +3207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3212,7 +3218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3225,7 +3231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3238,7 +3244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3256,7 +3262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3269,7 +3275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3283,7 +3289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3302,7 +3308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3314,7 +3320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3326,7 +3332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3339,7 +3345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3353,7 +3359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3370,7 +3376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3388,7 +3394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3415,7 +3421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -3439,7 +3445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -3499,7 +3505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -3524,7 +3530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -3572,7 +3578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -3599,7 +3605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -3659,7 +3665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -3684,7 +3690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -3705,10 +3711,10 @@
    "source": [
     "from statistics import mean \n",
     "\n",
-    "cmg=confusion_matrix(y_test,y_pred_mnb)\n",
-    "FP = cmg.sum(axis=0)- np.diag(cmg)  \n",
-    "FN = cmg.sum(axis=1) - np.diag(cmg)\n",
-    "TP = np.diag(cmg)\n",
+    "cmm=confusion_matrix(y_test,y_pred_mnb)\n",
+    "FP = cmm.sum(axis=0)- np.diag(cmm)  \n",
+    "FN = cmm.sum(axis=1) - np.diag(cmm)\n",
+    "TP = np.diag(cmm)\n",
     "TN = 1374 - (FP + FN + TP)\n",
     "print(FP.mean())\n",
     "print(FP)\n",
@@ -3732,7 +3738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -3759,7 +3765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -3819,7 +3825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -3852,7 +3858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -3873,10 +3879,10 @@
    "source": [
     "from statistics import mean \n",
     "\n",
-    "cmg=confusion_matrix(y_test,y_pred_cnb)\n",
-    "FP = cmg.sum(axis=0)- np.diag(cmg)  \n",
-    "FN = cmg.sum(axis=1) - np.diag(cmg)\n",
-    "TP = np.diag(cmg)\n",
+    "cmc=confusion_matrix(y_test,y_pred_cnb)\n",
+    "FP = cmc.sum(axis=0)- np.diag(cmc)  \n",
+    "FN = cmc.sum(axis=1) - np.diag(cmc)\n",
+    "TP = np.diag(cmc)\n",
     "TN = 1374 - (FP + FN + TP)\n",
     "print(FP.mean())\n",
     "print(FP)\n",
@@ -3900,7 +3906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -3927,15 +3933,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "One-over-Rest AUC=  0.8300436268659096\n",
-      "One-over-One AUC=  0.8336894797140543\n"
+      "One-over-Rest AUC=  0.1699563731340904\n",
+      "One-over-One AUC=  0.16631052028594573\n"
      ]
     },
     {
@@ -3987,7 +3993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -4027,7 +4033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -4054,7 +4060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -4114,7 +4120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -4135,6 +4141,47 @@
     "print(\"F measure: \",f1_score(y_test, y_pred_catnb, average='weighted'))\n",
     "print(\"Recall Score: \",recall_score(y_test, y_pred_catnb, average='weighted'))\n",
     "print(\"Precision Score: \",precision_score(y_test, y_pred_catnb, average='weighted'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101.83333333333333\n",
+      "[ 28  81 258  34 193  17]\n",
+      "101.83333333333333\n",
+      "[ 70 136 110 163  81  51]\n",
+      "127.16666666666667\n",
+      "[ 35  69 180  28 364  87]\n",
+      "1043.1666666666667\n",
+      "[1241 1088  826 1149  736 1219]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statistics import mean \n",
+    "\n",
+    "cmcat=confusion_matrix(y_test,y_pred_catnb)\n",
+    "FP = cmcat.sum(axis=0)- np.diag(cmcat)  \n",
+    "FN = cmcat.sum(axis=1) - np.diag(cmcat)\n",
+    "TP = np.diag(cmcat)\n",
+    "TN = 1374 - (FP + FN + TP)\n",
+    "print(FP.mean())\n",
+    "print(FP)\n",
+    "\n",
+    "print(FN.mean())\n",
+    "print(FN)\n",
+    "\n",
+    "print(TP.mean())\n",
+    "print(TP)\n",
+    "\n",
+    "print(TN.mean())\n",
+    "print(TN)\n"
    ]
   }
  ],
