--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -3933,15 +3933,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "One-over-Rest AUC=  0.1699563731340904\n",
-      "One-over-One AUC=  0.16631052028594573\n"
+      "One-over-Rest AUC=  0.8300436268659096\n",
+      "One-over-One AUC=  0.8336894797140543\n"
      ]
     },
     {
@@ -3987,8 +3987,7 @@
     "plt.plot([4.837e-3, 4.837e-3], [0., 0.4368], \"r:\") # Not shown\n",
     "plt.plot([0.0, 4.837e-3], [0.4368, 0.4368], \"r:\")  # Not shown\n",
     "plt.plot([4.837e-3], [0.4368], \"ro\")               # Not shown\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
