--- a/group15-lab2.ipynb
+++ b/group15-lab2.ipynb
@@ -3068,16 +3068,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.81157837, 0.81267067, 0.81092896])"
+       "array([0.83272727, 0.80363636, 0.81785064, 0.83606557, 0.79234973,\n",
+       "       0.81967213, 0.81238616, 0.82149362, 0.81602914, 0.83970856])"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3085,7 +3086,7 @@
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.model_selection import cross_val_predict\n",
-    "cross_val_score(clf, X_train, y_train, cv=3, scoring=\"accuracy\")\n"
+    "cross_val_score(clf, X_train, y_train, cv=10, scoring=\"accuracy\")\n"
    ]
   },
   {
@@ -3107,18 +3108,6 @@
    "source": [
     "y_score = cross_val_predict(clf, X_train, y_train, cv=3)\n",
     "y_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 319,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.metrics import mean_squared_error\n",
-    "# tree_mse = mean_squared_error(y_test, y_pred)\n",
-    "# tree_rmse = np.sqrt(tree_mse)\n",
-    "# tree_rmse"
    ]
   },
   {
